[gd_scene load_steps=6 format=3 uid="uid://30slinet2w2j"]

[ext_resource type="Script" path="res://Scripts/oneUp.gd" id="1_gxq18"]
[ext_resource type="Texture2D" uid="uid://d01kdny2fg4h6" path="res://Assets/sprites/marioItem.png" id="2_1866j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lw27r"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iilcc"]
size = Vector2(14, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wewd8"]
size = Vector2(1, 10)

[node name="OneUp" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_gxq18")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lw27r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1866j")
region_enabled = true
region_rect = Rect2(16, 48, 16, 16)

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_iilcc")
target_position = Vector2(0, 8)
collision_mask = 2

[node name="ShapeCast2D2" type="ShapeCast2D" parent="."]
shape = SubResource("RectangleShape2D_wewd8")
target_position = Vector2(8, 0)
collision_mask = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
